--- a/madurativas/Views/Home/Index.cshtml
+++ b/madurativas/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
         </div>
         <div class="col-md-2">
             <div class="form-group">
-                <input type="submit" name="btn-iniciar" style="color: white; margin-top: 25px; width: 120px;" onclick="Iniciar()" value="Iniciar" class="btn btn-sm btn-primary btn-wide" />
+                <input type="submit" name="btn-iniciar" style="color: white; margin-top: 25px;" onclick="Iniciar()" value="Iniciar" class="btn btn-sm btn-primary btn-wide" />
             </div>
         </div>
 
