--- a/madurativas/Views/Home/PartialView/_bibliografia.cshtml
+++ b/madurativas/Views/Home/PartialView/_bibliografia.cshtml
@@ -1,14 +1,13 @@
-﻿<div class="modal-content" style="background-color: #DF7F00; color:white;">
-    <div>
-        <button style="color:white; margin-right: 5%;" type="button" class="close" data-dismiss="modal">&times;</button>
-        <h3 style="padding-left:1%">Bibliografia</h3>
+﻿<div class="modal-content">
+    <div class="modal-header">
+        <h5 class="panel-title form-label">Bibliografia</h5>
     </div>
-    <div class="modal-body" id="bodyEvalRiesgo" style="background-color:#FFD489; color:black;">
+    <div class="modal-body">
 
         <p>
             Los trastornos del desarrollo son patologías que afectan entre un 20 y 35% de los niños. El pediatra tiene la responsabilidad de atenderlos de manera adecuada. La detección precoz de los problemas de desarrollo mejora el pronóstico de los pacientes. El uso de instrumentos de pesquisa permite identificar niños en riesgo de padecer un problema de desarrollo, cuando los síntomas son aún leves. La Sociedad Argentina de Pediatría recomienda el empleo de métodos de pesquisa para la detección oportuna de los problemas de desarrollo. La Prueba Nacional de Pesquisa (PRUNAPE) fue validada en Argentina para este fin.
         </p>
-        
+
         <p>
             La detección oportuna de problemas de desarrollo: 1) mejora la respuesta terapéutica, 2) reduce el tiempo de tratamiento, 3) mejora el rendimiento escolar, 4) reduce la deserción escolar, 5) reduce la desocupación juvenil. La prueba fue construida ante la evidencia de que aproximadamente el 50 % de los problemas de desarrollo psicomotor eran tardíamente reconocidos.
         </p>
@@ -18,7 +17,7 @@
 
         <p>
             Link con manual de la OMS de acceso libre y gratuito:
-            <br/>
+            <br />
             <a href="http://www1.paho.org/hq/dmdocuments/manual-vigilancia-desarrollo-infantil-aiepi-2011.pdf">http://www1.paho.org/hq/dmdocuments/manual-vigilancia-desarrollo-infantil-aiepi-2011.pdf</a>
         </p>
         <p>
@@ -31,3 +30,5 @@
 
 </div>
 
+<script src="~/Scripts/jquery-3.3.1.min.js"></script>
+<script src="~/Scripts/bootstrap-switch.min.js"></script>
