--- a/madurativas/Views/Home/PartialView/mChat/_Editar.cshtml
+++ b/madurativas/Views/Home/PartialView/mChat/_Editar.cshtml
@@ -313,7 +313,7 @@
             @*<hr />*@
 
             <div class="modal-footer">
-                    <button id="btnMchat" type="submit" class="btn btn-primary" @*onclick="Verificacion()"*@>Guardar</button>
+                    <button id="btnMchat" type="submit" class="btn btn-primary btn-fixed" @*onclick="Verificacion()"*@>Guardar</button>
                     @Html.ActionLink("Volver al Inicio", "Edit", "Home", new { id = Model.estudio_id }, new { @class = "btn btn-primary " })
             </div>
 
