--- a/madurativas/Views/mChat/Editar.cshtml
+++ b/madurativas/Views/mChat/Editar.cshtml
@@ -300,7 +300,7 @@ else
     <a href="http://www.panaacea.org/wp-content/uploads/2015/12/M-CHAT-R_F_Spanish_Argentina_Uruguay.pdf">http://www.panaacea.org/wp-content/uploads/2015/12/M-CHAT-R_F_Spanish_Argentina_Uruguay.pdf</a>
     <hr />
     <div>       
-        <button id="btnMchat" type="submit" class="btn btn-primary" onclick="Verificacion()">Guardar</button>
+        <button id="btnMchat" type="submit" class="btn btn-primary btn-fixed" onclick="Verificacion()">Guardar</button>
         @Html.ActionLink("Volver al Inicio", "Edit", "Home", new { id = Model.estudio_id }, new { @class = "btn btn-primary " })
     </div>
 
