--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_1.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_1.cshtml
@@ -29,7 +29,7 @@
                         <label class="control-label col-md-8">
                             1. Si Ud. señala algo que está del otro lado de la habitación,  ¿ mira hacia allí?
                         </label>
-                        <div id="dt1_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt1_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt1quest1">
                                 <input type="radio" name="options" id="dt1_quest_1_option1">Si
                             </label>
@@ -63,7 +63,7 @@
                                     Mira el objeto
                                 </label>
 
-                                <div id="dt1_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt1_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt1quest2">
                                         <input type="radio" name="options" id="dt1_quest_2_option1">Si
                                     </label>
@@ -86,7 +86,7 @@
                                 <label class="control-label col-md-8">
                                     Señala el objeto
                                 </label>
-                                <div id="dt1_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt1_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt1quest3">
                                         <input type="radio" name="options" id="dt1_quest_3_option1">Si
                                     </label>
@@ -109,7 +109,7 @@
                                 <label class="control-label col-md-8">
                                     Mira y comenta sobre el objeto
                                 </label>
-                                <div id="dt1_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt1_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt1quest4">
                                         <input type="radio" name="options" id="dt1_quest_4_option1">Si
                                     </label>
@@ -132,7 +132,7 @@
                                 <label class="control-label col-md-8">
                                     Mira si padre/madre señala y dice “¡mirá!”
                                 </label>
-                                <div id="dt1_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt1_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt1quest5">
                                         <input type="radio" name="options" id="dt1_quest_5_option1">Si
                                     </label>
@@ -161,7 +161,7 @@
                                 <label class="control-label col-md-8">
                                     Ignora al padre/madre
                                 </label>
-                                <div id="dt1_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt1_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt1quest6">
                                         <input type="radio" name="options" id="dt1_quest_6_option1">Si
                                     </label>
@@ -184,7 +184,7 @@
                                 <label class="control-label col-md-8">
                                     Mira alrededor de manera aleatoria
                                 </label>
-                                <div id="dt1_quest_7" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt1_quest_7" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt1quest7">
                                         <input type="radio" name="options" id="dt1_quest_7_option1">Si
                                     </label>
@@ -207,7 +207,7 @@
                                 <label class="control-label col-md-8">
                                     Mira el dedo de padre/madre
                                 </label>
-                                <div id="dt1_quest_8" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt1_quest_8" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt1quest8">
                                         <input type="radio" name="options" id="dt1_quest_8_option1">Si
                                     </label>
@@ -259,7 +259,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq1Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>                
+                <button id="btndtq1Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>                
             </div>
         </div>
     </div>
