--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_10.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_10.cshtml
@@ -32,7 +32,7 @@
                         <label class=" col-md-8">
                             10. ¿@Model.estudio.Paciente.nombre responde cuando lo/la llama por su nombre?
                         </label>
-                        <div id="dt10_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt10_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt10quest1">
                                 <input type="radio" name="options" id="dt10_quest_1_option1">Si
                             </label>
@@ -69,7 +69,7 @@
                             <label class="control-label col-md-8">
                                 ¿Levanta la cabeza y lo/la mira?
                             </label>
-                            <div id="dt10_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt10_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt10quest2">
                                     <input type="radio" name="options" id="dt10_quest_2_option1">Si
                                 </label>
@@ -92,7 +92,7 @@
                             <label class="control-label col-md-8">
                                 ¿Habla o balbucea?
                             </label>
-                            <div id="dt10_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt10_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt10quest3">
                                     <input type="radio" name="options" id="dt10_quest_3_option1">Si
                                 </label>
@@ -115,7 +115,7 @@
                             <label class="control-label col-md-8">
                                 ¿Interrumpe lo que está haciendo?
                             </label>
-                            <div id="dt10_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt10_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt10quest4">
                                     <input type="radio" name="options" id="dt10_quest_4_option1">Si
                                 </label>
@@ -145,7 +145,7 @@
                             <label class="control-label col-md-8">
                                 ¿No responde?
                             </label>
-                            <div id="dt10_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt10_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt10quest5">
                                     <input type="radio" name="options" id="dt10_quest_5_option1">Si
                                 </label>
@@ -168,7 +168,7 @@
                             <label class="control-label col-md-8">
                                 ¿Parece escuchar pero lo/la ignora?
                             </label>
-                            <div id="dt10_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt10_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt10quest6">
                                     <input type="radio" name="options" id="dt10_quest_6_option1">Si
                                 </label>
@@ -191,7 +191,7 @@
                             <label class="control-label col-md-8">
                                 ¿Responde sólo si el padre/madre está frente a la cara del niño/a?
                             </label>
-                            <div id="dt10_quest_7" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt10_quest_7" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt10quest7">
                                     <input type="radio" name="options" id="dt10_quest_7_option1">Si
                                 </label>
@@ -214,7 +214,7 @@
                             <label class="control-label col-md-8">
                                 ¿Responde sólo si lo/la tocan
                             </label>
-                            <div id="dt10_quest_8" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt10_quest_8" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt10quest8">
                                     <input type="radio" name="options" id="dt10_quest_8_option1">Si
                                 </label>
@@ -263,7 +263,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq10Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq10Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
