--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_11.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_11.cshtml
@@ -31,7 +31,7 @@
                         <label class="control-label col-md-8">
                             11. Cuando le sonríe a  @Model.estudio.Paciente.nombre.Trim(), ¿le devuelve la sonrisa?
                         </label>
-                        <div id="dt11_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt11_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt11quest1">
                                 <input type="radio" name="options" id="dt11_quest_1_option1">Si
                             </label>
@@ -66,7 +66,7 @@
                             <label class="control-label col-md-8">
                                 ¿Sonríe cuando Ud. le sonríe?
                             </label>
-                            <div id="dt11_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt11_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt11quest2">
                                     <input type="radio" name="options" id="dt11_quest_2_option1">Si
                                 </label>
@@ -89,7 +89,7 @@
                             <label class="control-label col-md-8">
                                 ¿Sonríe cuando Ud. entra a la habitación?
                             </label>
-                            <div id="dt11_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt11_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt11quest3">
                                     <input type="radio" name="options" id="dt11_quest_3_option1">Si
                                 </label>
@@ -112,7 +112,7 @@
                             <label class="control-label col-md-8">
                                 ¿Sonríe cuando Ud. vuelve a su casa?
                             </label>
-                            <div id="dt11_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt11_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt11quest4">
                                     <input type="radio" name="options" id="dt11_quest_4_option1">Si
                                 </label>
@@ -140,7 +140,7 @@
                             <label class="control-label col-md-8">
                                 ¿Está siempre sonriendo?
                             </label>
-                            <div id="dt11_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt11_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt11quest5">
                                     <input type="radio" name="options" id="dt11_quest_5_option1">Si
                                 </label>
@@ -163,7 +163,7 @@
                             <label class="control-label col-md-8">
                                 ¿Sonríe en relación a un juguete o actividad favorita?
                             </label>
-                            <div id="dt11_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt11_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt11quest6">
                                     <input type="radio" name="options" id="dt11_quest_6_option1">Si
                                 </label>
@@ -186,7 +186,7 @@
                             <label class="control-label col-md-8">
                                 ¿Sonríe al azar o por nada en particular?
                             </label>
-                            <div id="dt11_quest_7" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt11_quest_7" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt11quest7">
                                     <input type="radio" name="options" id="dt11_quest_7_option1">Si
                                 </label>
@@ -242,7 +242,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq11Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq11Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
