--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_12.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_12.cshtml
@@ -30,7 +30,7 @@
                             <label class="control-label col-md-8">
                                 12. ¿A @Model.estudio.Paciente.nombre le molestan los ruidos comunes de todos los días?
                             </label>
-                            <div id="dt12_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt12_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt12quest1">
                                     <input type="radio" name="options" id="dt12_quest_1_option1">Si
                                 </label>
@@ -62,7 +62,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Un lavarropas?
                                 </label>
-                                <div id="dt12_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt12_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt12quest2">
                                         <input type="radio" name="options" id="dt12_quest_2_option1">Si
                                     </label>
@@ -85,7 +85,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Bebés llorando?
                                 </label>
-                                <div id="dt12_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt12_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt12quest3">
                                         <input type="radio" name="options" id="dt12_quest_3_option1">Si
                                     </label>
@@ -108,7 +108,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Una aspiradora?
                                 </label>
-                                <div id="dt12_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt12_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt12quest4">
                                         <input type="radio" name="options" id="dt12_quest_4_option1">Si
                                     </label>
@@ -131,7 +131,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Un secador?
                                 </label>
-                                <div id="dt12_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt12_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt12quest5">
                                         <input type="radio" name="options" id="dt12_quest_5_option1">Si
                                     </label>
@@ -154,7 +154,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Tráfico?
                                 </label>
-                                <div id="dt12_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt12_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt12quest6">
                                         <input type="radio" name="options" id="dt12_quest_6_option1">Si
                                     </label>
@@ -177,7 +177,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Bebés gritando o chillando?
                                 </label>
-                                <div id="dt12_quest_7" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt12_quest_7" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt12quest7">
                                         <input type="radio" name="options" id="dt12_quest_7_option1">Si
                                     </label>
@@ -200,7 +200,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Música fuerte?
                                 </label>
-                                <div id="dt12_quest_8" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt12_quest_8" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt12quest8">
                                         <input type="radio" name="options" id="dt12_quest_8_option1">Si
                                     </label>
@@ -223,7 +223,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Teléfono sonando o timbre?
                                 </label>
-                                <div id="dt12_quest_9" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt12_quest_9" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt12quest9">
                                         <input type="radio" name="options" id="dt12_quest_9_option1">Si
                                     </label>
@@ -246,7 +246,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Lugares ruidosos como un supermercado o un restaurante?
                                 </label>
-                                <div id="dt12_quest_10" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt12_quest_10" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt12quest10">
                                         <input type="radio" name="options" id="dt12_quest_10_option1">Si
                                     </label>
@@ -269,7 +269,7 @@
                                 <label class="control-label col-md-8">
                                     Otros
                                 </label>
-                                <div id="dt12_quest_11" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt12_quest_11" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt12quest11">
                                         <input type="radio" name="options" id="dt12_quest_11_option1">Si
                                     </label>
@@ -319,7 +319,7 @@
                                     <label class="control-label col-md-8">
                                         ¿Se tapa los oídos de manera tranquila?
                                     </label>
-                                    <div id="dt12_quest_13" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <div id="dt12_quest_13" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                         <label onclick="Selectable(this)" class="btn btn-secondary dt12quest13">
                                             <input type="radio" name="options" id="dt12_quest_13_option1">Si
                                         </label>
@@ -342,7 +342,7 @@
                                     <label class="control-label col-md-8">
                                         ¿Le dice que no le gusta el ruido?
                                     </label>
-                                    <div id="dt12_quest_14" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <div id="dt12_quest_14" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                         <label onclick="Selectable(this)" class="btn btn-secondary dt12quest14">
                                             <input type="radio" name="options" id="dt12_quest_14_option1">Si
                                         </label>
@@ -372,7 +372,7 @@
                                     <label class="control-label col-md-8">
                                         ¿Grita?
                                     </label>
-                                    <div id="dt12_quest_15" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <div id="dt12_quest_15" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                         <label onclick="Selectable(this)" class="btn btn-secondary dt12quest15">
                                             <input type="radio" name="options" id="dt12_quest_15_option1">Si
                                         </label>
@@ -395,7 +395,7 @@
                                     <label class="control-label col-md-8">
                                         ¿Llora?
                                     </label>
-                                    <div id="dt12_quest_16" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <div id="dt12_quest_16" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                         <label onclick="Selectable(this)" class="btn btn-secondary dt12quest16">
                                             <input type="radio" name="options" id="dt12_quest_16_option1">Si
                                         </label>
@@ -418,7 +418,7 @@
                                     <label class="control-label col-md-8">
                                         ¿Se tapa los oídos mientras se muestra alterado?
                                     </label>
-                                    <div id="dt12_quest_17" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <div id="dt12_quest_17" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                         <label onclick="Selectable(this)" class="btn btn-secondary dt12quest17">
                                             <input type="radio" name="options" id="dt12_quest_17_option1">Si
                                         </label>
@@ -468,7 +468,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq12Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq12Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
