--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_14.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_14.cshtml
@@ -32,7 +32,7 @@
                         <label class="control-label col-md-8">
                             14. ¿@Model.estudio.Paciente.nombre lo/la mira a los ojos cuando le está hablando, jugando con él /ella, o cuando lo/la está vistiendo?
                         </label>
-                        <div id="dt14_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt14_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt14quest1">
                                 <input type="radio" name="options" id="dt14_quest_1_option1">Si
                             </label>
@@ -55,7 +55,7 @@
                         <label class="control-label col-md-8">
                             Por favor, deme un ejemplo de cuando lo/la mira a los ojos (Si el padre/madre no da un ejemplo de PASA de los que están aquí, pregunte cada uno individualmente)
                         </label>
-                        <div id="dt14_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt14_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt14quest2">
                                 <input type="radio" name="options" id="dt14_quest_2_option1">Si
                             </label>
@@ -79,7 +79,7 @@
                             <label class="control-label col-md-8">
                                 ¿Necesita algo?
                             </label>
-                            <div id="dt14_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt14_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt14quest3">
                                     <input type="radio" name="options" id="dt14_quest_3_option1">Si
                                 </label>
@@ -102,7 +102,7 @@
                             <label class="control-label col-md-8">
                                 ¿Está jugando con él o ella?
                             </label>
-                            <div id="dt14_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt14_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt14quest4">
                                     <input type="radio" name="options" id="dt14_quest_4_option1">Si
                                 </label>
@@ -125,7 +125,7 @@
                             <label class="control-label col-md-8">
                                 ¿Le está dando de comer?
                             </label>
-                            <div id="dt14_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt14_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt14quest5">
                                     <input type="radio" name="options" id="dt14_quest_5_option1">Si
                                 </label>
@@ -148,7 +148,7 @@
                             <label class="control-label col-md-8">
                                 ¿No responde?
                             </label>
-                            <div id="dt14_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt14_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt14quest6">
                                     <input type="radio" name="options" id="dt14_quest_6_option1">Si
                                 </label>
@@ -171,7 +171,7 @@
                             <label class="control-label col-md-8">
                                 ¿Parece escuchar pero lo/la ignora?
                             </label>
-                            <div id="dt14_quest_7" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt14_quest_7" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt14quest7">
                                     <input type="radio" name="options" id="dt14_quest_7_option1">Si
                                 </label>
@@ -194,7 +194,7 @@
                             <label class="control-label col-md-8">
                                 ¿Responde sólo si el padre/madre está frente a la cara del niño/a?
                             </label>
-                            <div id="dt14_quest_8" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt14_quest_8" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt14quest8">
                                     <input type="radio" name="options" id="dt14_quest_8_option1">Si
                                 </label>
@@ -217,7 +217,7 @@
                             <label class="control-label col-md-8">
                                 ¿Responde sólo si lo/la tocan?
                             </label>
-                            <div id="dt14_quest_9" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt14_quest_9" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt14quest9">
                                     <input type="radio" name="options" id="dt14_quest_9_option1">Si
                                 </label>
@@ -240,7 +240,7 @@
                         <label class="control-label col-md-8">
                             ¿Su hijo o hija lo/la mira a los ojos todos los días?
                         </label>
-                        <div id="dt14_quest_10" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt14_quest_10" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt14quest10">
                                 <input type="radio" name="options" id="dt14_quest_10_option1">Si
                             </label>
@@ -263,7 +263,7 @@
                         <label class="control-label col-md-8">
                             En un día en el que están juntos/juntas durante el día entero ¿la/lo mira a los ojos al menos 5 veces?
                         </label>
-                        <div id="dt14_quest_11" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt14_quest_11" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt14quest11">
                                 <input type="radio" name="options" id="dt14_quest_11_option1">Si
                             </label>
@@ -303,7 +303,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq14Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq14Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
