--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_16.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_16.cshtml
@@ -31,7 +31,7 @@
                         <label class="control-label col-md-8">
                             16. Si Ud. se da vuelta para mirar algo, ¿@Model.estudio.Paciente.nombre gira la cabeza para ver lo que Ud. está mirando?
                         </label>
-                        <div id="dt16_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt16_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt16quest1">
                                 <input type="radio" name="options" id="dt16_quest_1_option1">Si
                             </label>
@@ -65,7 +65,7 @@
                             <label class="control-label col-md-8">
                                 ¿Mira hacia la cosa que Ud. está mirando?
                             </label>
-                            <div id="dt16_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt16_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt16quest2">
                                     <input type="radio" name="options" id="dt16_quest_2_option1">Si
                                 </label>
@@ -88,7 +88,7 @@
                             <label class="control-label col-md-8">
                                 ¿Señala la cosa que Ud. está mirando?
                             </label>
-                            <div id="dt16_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt16_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt16quest3">
                                     <input type="radio" name="options" id="dt16_quest_3_option1">Si
                                 </label>
@@ -111,7 +111,7 @@
                             <label class="control-label col-md-8">
                                 ¿Gira la cabeza para ver lo que Ud. está mirando?
                             </label>
-                            <div id="dt16_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt16_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt16quest4">
                                     <input type="radio" name="options" id="dt16_quest_4_option1">Si
                                 </label>
@@ -139,7 +139,7 @@
                             <label class="control-label col-md-8">
                                 ¿Lo/la ignora?
                             </label>
-                            <div id="dt16_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt16_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt16quest5">
                                     <input type="radio" name="options" id="dt16_quest_5_option1">Si
                                 </label>
@@ -162,7 +162,7 @@
                             <label class="control-label col-md-8">
                                 ¿Lo/la mira a la cara?
                             </label>
-                            <div id="dt16_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt16_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt16quest6">
                                     <input type="radio" name="options" id="dt16_quest_6_option1">Si
                                 </label>
@@ -210,7 +210,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq16Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq16Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
