--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_17.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_17.cshtml
@@ -30,7 +30,7 @@
                         <label class="control-label col-md-8">
                             17. ¿@Model.estudio.Paciente.nombre intenta hacer que Ud. lo/la mire?
                         </label>
-                        <div id="dt17_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt17_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt17quest1">
                                 <input type="radio" name="options" id="dt17_quest_1_option1">Si
                             </label>
@@ -66,7 +66,7 @@
                             <label class="control-label col-md-8">
                                 ¿Dice “¡Mirá!” o “¡Mirame!”?
                             </label>
-                            <div id="dt17_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt17_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt17quest2">
                                     <input type="radio" name="options" id="dt17_quest_2_option1">Si
                                 </label>
@@ -89,7 +89,7 @@
                             <label class="control-label col-md-8">
                                 ¿Balbucea o hace un sonido para que Ud. mire lo que está haciendo?
                             </label>
-                            <div id="dt17_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt17_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt17quest3">
                                     <input type="radio" name="options" id="dt17_quest_3_option1">Si
                                 </label>
@@ -112,7 +112,7 @@
                             <label class="control-label col-md-8">
                                 ¿Lo/la mira para obtener una felicitación o un comentario?
                             </label>
-                            <div id="dt17_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt17_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt17quest4">
                                     <input type="radio" name="options" id="dt17_quest_4_option1">Si
                                 </label>
@@ -135,7 +135,7 @@
                             <label class="control-label col-md-8">
                                 ¿Sigue mirándola/o para ver si Ud. la/lo está mirando?
                             </label>
-                            <div id="dt17_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt17_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt17quest5">
                                     <input type="radio" name="options" id="dt17_quest_5_option1">Si
                                 </label>
@@ -158,7 +158,7 @@
                             <label class="control-label col-md-8">
                                 Otro
                             </label>
-                            <div id="dt17_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt17_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt17quest6">
                                     <input type="radio" name="options" id="dt17_quest_6_option1">Si
                                 </label>
@@ -212,7 +212,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq17Save" onclick="location.reload(true);" type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq17Save" onclick="location.reload(true);" type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
