--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_18.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_18.cshtml
@@ -31,7 +31,7 @@
                         <label class="control-label col-md-8">
                             18. ¿@Model.estudio.Paciente.nombre entiende cuando Ud. le dice que haga algo?
                         </label>
-                        <div id="dt18_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt18_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt18quest1">
                                 <input type="radio" name="options" id="dt18_quest_1_option1">Si
                             </label>
@@ -64,7 +64,7 @@
                             <label class="control-label col-md-8">
                                 El ejemplo indica que el niño/a puede entender una orden simple sin pistas no verbales?
                             </label>
-                            <div id="dt18_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt18_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt18quest2">
                                     <input type="radio" name="options" id="dt18_quest_2_option1">Si
                                 </label>
@@ -88,7 +88,7 @@
                         <label class="control-label col-md-8">
                             Cuando la situación o el contexto le dan una pista, ¿puede seguir una orden? Por ejemplo, cuando Ud. está vestida/o como para salir y le dice que busque sus zapatos, ¿entiende?
                         </label>
-                        <div id="dt18_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt18_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt18quest3">
                                 <input type="radio" name="options" id="dt18_quest_3_option1">Si
                             </label>
@@ -111,7 +111,7 @@
                         <label class="control-label col-md-8">
                             Si es la hora de la cena y la comida está en la mesa, y le dice a su hijo o hija que se siente, ¿su hijo o hija se sienta a la mesa?
                         </label>
-                        <div id="dt18_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt18_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt18quest4">
                                 <input type="radio" name="options" id="dt18_quest_4_option1">Si
                             </label>
@@ -143,7 +143,7 @@
                             <label class="control-label col-md-8">
                                 (1) Si Ud. dice, “Mostrame tu zapato” sin señalar, hacer gestos, o sugerir (cuando Ud. no está vistiéndose o por salir) ¿su hijo o hija le muestra su zapato?
                             </label>
-                            <div id="dt18_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt18_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt18quest5">
                                     <input type="radio" name="options" id="dt18_quest_5_option1">Si
                                 </label>
@@ -166,7 +166,7 @@
                             <label class="control-label col-md-8">
                                 (2) Si Ud. dice, “Traeme la frazada” o le pide otro objeto sin señalar, hacer gestos, o sugerir ¿su hijo o hija le trae lo que le pidió?
                             </label>
-                            <div id="dt18_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt18_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt18quest6">
                                     <input type="radio" name="options" id="dt18_quest_6_option1">Si
                                 </label>
@@ -189,7 +189,7 @@
                             <label class="control-label col-md-8">
                                 (3) Si Ud. dice, “Poné el libro sobre la silla” sin señalar, hacer gestos, o dar cualquier otra sugerencia ¿su hijo o hija pone el libro sobre la silla?
                             </label>
-                            <div id="dt18_quest_7" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt18_quest_7" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt18quest7">
                                     <input type="radio" name="options" id="dt18_quest_7_option1">Si
                                 </label>
@@ -230,7 +230,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq18Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq18Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
