--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_19.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_19.cshtml
@@ -32,7 +32,7 @@
                         <label class="control-label col-md-8">
                             19. Si pasa algo nuevo, ¿@Model.estudio.Paciente.nombre lo/la mira a la cara para ver qué hace Ud.?
                         </label>
-                        <div id="dt19_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt19_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt19quest1">
                                 <input type="radio" name="options" id="dt19_quest_1_option1">Si
                             </label>
@@ -55,7 +55,7 @@
                         <label class="control-label col-md-8">
                             Si su hijo o hija escucha un ruido extraño o que lo/la asusta, ¿lo/la miraría a Ud. antes de reaccionar?
                         </label>
-                        <div id="dt19_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt19_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt19quest2">
                                 <input type="radio" name="options" id="dt19_quest_2_option1">Si
                             </label>
@@ -78,7 +78,7 @@
                         <label class="control-label col-md-8">
                             ¿Su hijo o hija lo/la mira a cuando se acerca alguien que no conoce?
                         </label>
-                        <div id="dt19_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt19_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt19quest3">
                                 <input type="radio" name="options" id="dt19_quest_3_option1">Si
                             </label>
@@ -101,7 +101,7 @@
                         <label class="control-label col-md-8">
                             ¿Su hijo o hija lo/la mira a cuando se encuentra en una situación desconocida o un poco atemorizante?
                         </label>
-                        <div id="dt19_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt19_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt19quest4">
                                 <input type="radio" name="options" id="dt19_quest_4_option1">Si
                             </label>
@@ -141,7 +141,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq19Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq19Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
