--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_3.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_3.cshtml
@@ -29,7 +29,7 @@
                             <label class="control-label col-md-8">
                                 3- ¿ juega a simular, hacer “como si”, o juegos de imaginación?
                             </label>
-                            <div id="dt3_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt3_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt3quest1">
                                     <input type="radio" name="options" id="dt3_quest_1_option1">Si
                                 </label>
@@ -67,7 +67,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Simula tomar de una taza de juguete?
                                 </label>
-                                <div id="dt3_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt3_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt3quest2">
                                         <input type="radio" name="options" id="dt3_quest_2_option1">Si
                                     </label>
@@ -90,7 +90,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Simula comer con un tenedor o una cuchara de juguete?
                                 </label>
-                                <div id="dt3_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt3_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt3quest3">
                                         <input type="radio" name="options" id="dt3_quest_3_option1">Si
                                     </label>
@@ -113,7 +113,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Simula hablar por teléfono?
                                 </label>
-                                <div id="dt3_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt3_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt3quest4">
                                         <input type="radio" name="options" id="dt3_quest_4_option1">Si
                                     </label>
@@ -136,7 +136,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Simula darle de comer a una muñeca o a un animal de peluche?
                                 </label>
-                                <div id="dt3_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt3_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt3quest5">
                                         <input type="radio" name="options" id="dt3_quest_5_option1">Si
                                     </label>
@@ -159,7 +159,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Empuja un autito como si estuviera andando por un camino imaginario?
                                 </label>
-                                <div id="dt3_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt3_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt3quest6">
                                         <input type="radio" name="options" id="dt3_quest_6_option1">Si
                                     </label>
@@ -182,7 +182,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Simula ser un robot, un avión, una bailarina, o algún otro personaje favorito?
                                 </label>
-                                <div id="dt3_quest_7" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt3_quest_7" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt3quest7">
                                         <input type="radio" name="options" id="dt3_quest_7_option1">Si
                                     </label>
@@ -205,7 +205,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Pone una cacerola de juguete sobre la hornalla de una cocina de juguete?
                                 </label>
-                                <div id="dt3_quest_8" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt3_quest_8" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt3quest8">
                                         <input type="radio" name="options" id="dt3_quest_8_option1">Si
                                     </label>
@@ -228,7 +228,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Hace como si revolviera comida imaginaria?
                                 </label>
-                                <div id="dt3_quest_9" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt3_quest_9" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt3quest9">
                                         <input type="radio" name="options" id="dt3_quest_9_option1">Si
                                     </label>
@@ -251,7 +251,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Pone muñequitos o figuras de acción en un auto o camión como si fueran el conductor o el pasajero?
                                 </label>
-                                <div id="dt3_quest_10" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt3_quest_10" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt3quest10">
                                         <input type="radio" name="options" id="dt3_quest_10_option1">Si
                                     </label>
@@ -274,7 +274,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Simula aspirar la alfombra, barrer el piso, o cortar el pasto?
                                 </label>
-                                <div id="dt3_quest_11" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt3_quest_11" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt3quest11">
                                         <input type="radio" name="options" id="dt3_quest_11_option1">Si
                                     </label>
@@ -297,7 +297,7 @@
                                 <label class="control-label col-md-8">
                                     Otros (describa)
                                 </label>
-                                <div id="dt3_quest_12" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt3_quest_12" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt3quest12">
                                         <input type="radio" name="options" id="dt3_quest_12_option1">Si
                                     </label>
@@ -352,7 +352,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq3Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq3Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>        
         </div>
     </div>
