--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_5.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_5.cshtml
@@ -31,7 +31,7 @@
                             <label class="control-label col-md-8">
                                 5- ¿@Model.estudio.Paciente.nombre hace movimientos raros con los dedos cerca de sus ojos?
                             </label>
-                            <div id="dt5_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt5_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt5quest1">
                                     <input type="radio" name="options" id="dt5_quest_1_option1">Si
                                 </label>
@@ -68,7 +68,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Mira sus propias manos?
                                 </label>
-                                <div id="dt5_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt5_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt5quest2">
                                         <input type="radio" name="options" id="dt5_quest_2_option1">Si
                                     </label>
@@ -91,7 +91,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Mueve los dedos cuando juega a “¿adónde está el bebé?, ¡acá está!”?
                                 </label>
-                                <div id="dt5_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt5_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt5quest3">
                                         <input type="radio" name="options" id="dt5_quest_3_option1">Si
                                     </label>
@@ -121,7 +121,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Mueve los dedos delante de sus ojos?
                                 </label>
-                                <div id="dt5_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt5_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt5quest4">
                                         <input type="radio" name="options" id="dt5_quest_4_option1">Si
                                     </label>
@@ -144,7 +144,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Pone las manos muy cerca de sus ojos?
                                 </label>
-                                <div id="dt5_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt5_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt5quest5">
                                         <input type="radio" name="options" id="dt5_quest_5_option1">Si
                                     </label>
@@ -167,7 +167,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Pone las manos al costado de sus ojos?
                                 </label>
-                                <div id="dt5_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt5_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt5quest6">
                                         <input type="radio" name="options" id="dt5_quest_6_option1">Si
                                     </label>
@@ -190,7 +190,7 @@
                                 <label class="control-label col-md-8">
                                     ¿Aletea con las manos cerca de su cara?
                                 </label>
-                                <div id="dt5_quest_7" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt5_quest_7" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt5quest7">
                                         <input type="radio" name="options" id="dt5_quest_7_option1">Si
                                     </label>
@@ -213,7 +213,7 @@
                                 <label class="control-label col-md-8">
                                     Otros
                                 </label>
-                                <div id="dt5_quest_8" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt5_quest_8" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt5quest8">
                                         <input type="radio" name="options" id="dt5_quest_8_option1">Si
                                     </label>
@@ -248,7 +248,7 @@
                                 <label class="control-label col-md-8">
                                     Los ejemplos de FALLA ¿SE DAN MÁS DE 2 VECES POR SEMANA?
                                 </label>
-                                <div id="dt5_quest_10" class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div id="dt5_quest_10" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                     <label onclick="Selectable(this)" class="btn btn-secondary dt5quest10">
                                         <input type="radio" name="options" id="dt5_quest_10_option1">Si
                                     </label>
@@ -290,7 +290,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq5Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq5Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
