--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_7.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_7.cshtml
@@ -31,7 +31,7 @@
                         <label class="control-label col-md-8">
                             7. ¿ @Model.estudio.Paciente.nombre señala con el dedo sólo cuando quiere mostrarle algo interesante?
                         </label>
-                        <div id="dt7_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt7_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt7quest1">
                                 <input type="radio" name="options" id="dt7_quest_1_option1">Si
                             </label>
@@ -70,7 +70,7 @@
                             <label class="control-label col-md-8">
                                 ¿Un avión en el cielo?
                             </label>
-                            <div id="dt7_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt7_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt7quest2">
                                     <input type="radio" name="options" id="dt7_quest_2_option1">Si
                                 </label>
@@ -93,7 +93,7 @@
                             <label class="control-label col-md-8">
                                 ¿Un camión en la ruta?
                             </label>
-                            <div id="dt7_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt7_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt7quest3">
                                     <input type="radio" name="options" id="dt7_quest_3_option1">Si
                                 </label>
@@ -116,7 +116,7 @@
                             <label class="control-label col-md-8">
                                 ¿Un insecto en el piso?
                             </label>
-                            <div id="dt7_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt7_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt7quest4">
                                     <input type="radio" name="options" id="dt7_quest_4_option1">Si
                                 </label>
@@ -140,7 +140,7 @@
                             <label class="control-label col-md-8">
                                 ¿Un animal en el patio/jardín?
                             </label>
-                            <div id="dt7_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt7_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt7quest5">
                                     <input type="radio" name="options" id="dt7_quest_5_option1">Si
                                 </label>
@@ -164,7 +164,7 @@
                         <label class="control-label col-md-8">
                             ¿Cómo hace su hijo o hija para dirigir su atención al objeto? ¿Señalaría con su dedo índice?
                         </label>
-                        <div id="dt7_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt7_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt7quest6">
                                 <input type="radio" name="options" id="dt7_quest_6_option1">Si
                             </label>
@@ -187,7 +187,7 @@
                         <label class="control-label col-md-8">
                             ¿Haría esto para mostrar su interés, y no para pedir ayuda?
                         </label>
-                        <div id="dt7_quest_7" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt7_quest_7" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt7quest7">
                                 <input type="radio" name="options" id="dt7_quest_7_option1">Si
                             </label>
@@ -234,7 +234,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq7Save" onclick="location.reload(true);" type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq7Save" onclick="location.reload(true);" type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
