--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_8.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_8.cshtml
@@ -32,7 +32,7 @@
                         <label class="control-label col-md-8">
                             8. ¿@Model.estudio.Paciente.nombre se interesa por otros niños?
                         </label>
-                        <div id="dt8_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt8_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt8quest1">
                                 <input type="radio" name="options" id="dt8_quest_1_option1">Si
                             </label>
@@ -55,7 +55,7 @@
                         <label class="control-label col-md-8">
                             ¿Está interesado en otros niños que no sean su hermano o su hermana?
                         </label>
-                        <div id="dt8_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt8_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt8quest2">
                                 <input type="radio" name="options" id="dt8_quest_2_option1">Si
                             </label>
@@ -78,7 +78,7 @@
                         <label class="control-label col-md-8">
                             Cuando están en una plaza o en el supermercado, ¿ generalmente responde a otros niños?
                         </label>
-                        <div id="dt8_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt8_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt8quest3">
                                 <input type="radio" name="options" id="dt8_quest_3_option1">Si
                             </label>
@@ -109,7 +109,7 @@
                             <label class="control-label col-md-8">
                                 ¿Juega con el otro niño?
                             </label>
-                            <div id="dt8_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt8_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt8quest4">
                                     <input type="radio" name="options" id="dt8_quest_4_option1">Si
                                 </label>
@@ -132,7 +132,7 @@
                             <label class="control-label col-md-8">
                                 ¿Le habla al otro niño?
                             </label>
-                            <div id="dt8_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt8_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt8quest5">
                                     <input type="radio" name="options" id="dt8_quest_5_option1">Si
                                 </label>
@@ -155,7 +155,7 @@
                             <label class="control-label col-md-8">
                                 ¿Balbucea, vocaliza o hace sonidos?
                             </label>
-                            <div id="dt8_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt8_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt8quest6">
                                     <input type="radio" name="options" id="dt8_quest_6_option1">Si
                                 </label>
@@ -178,7 +178,7 @@
                             <label class="control-label col-md-8">
                                 ¿Mira al otro niño?
                             </label>
-                            <div id="dt8_quest_7" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt8_quest_7" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt8quest7">
                                     <input type="radio" name="options" id="dt8_quest_7_option1">Si
                                 </label>
@@ -201,7 +201,7 @@
                             <label class="control-label col-md-8">
                                 ¿Sonríe al otro niño?
                             </label>
-                            <div id="dt8_quest_8" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt8_quest_8" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt8quest8">
                                     <input type="radio" name="options" id="dt8_quest_8_option1">Si
                                 </label>
@@ -224,7 +224,7 @@
                             <label class="control-label col-md-8">
                                 ¿Actúa tímidamente al inicio pero después sonríe?
                             </label>
-                            <div id="dt8_quest_9" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt8_quest_9" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt8quest9">
                                     <input type="radio" name="options" id="dt8_quest_9_option1">Si
                                 </label>
@@ -247,7 +247,7 @@
                             <label class="control-label col-md-8">
                                 ¿Se entusiasma con el otro niño?
                             </label>
-                            <div id="dt8_quest_10" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt8_quest_10" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt8quest10">
                                     <input type="radio" name="options" id="dt8_quest_10_option1">Si
                                 </label>
@@ -271,7 +271,7 @@
                         <label class="control-label col-md-8">
                             ¿Responde a otros niños más de la mitad de las veces?
                         </label>
-                        <div id="dt8_quest_11" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt8_quest_11" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt8quest11">
                                 <input type="radio" name="options" id="dt8_quest_11_option1">Si
                             </label>
