--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_9.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_9.cshtml
@@ -31,7 +31,7 @@
                         <label class="control-label col-md-8">
                             9. ¿@Model.estudio.Paciente.nombre le muestra cosas, trayéndoselas o alzándolas para que Ud. las vea – no para buscar ayuda sino simplemente para compartirlas con Ud.?
                         </label>
-                        <div id="dt9_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt9_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt9quest1">
                                 <input type="radio" name="options" id="dt9_quest_1_option1">Si
                             </label>
@@ -70,7 +70,7 @@
                             <label class="control-label col-md-8">
                                 ¿Una foto o un juguete sólo para mostrarle?
                             </label>
-                            <div id="dt9_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt9_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt9quest2">
                                     <input type="radio" name="options" id="dt9_quest_2_option1">Si
                                 </label>
@@ -93,7 +93,7 @@
                             <label class="control-label col-md-8">
                                 ¿Un dibujo que haya hecho?
                             </label>
-                            <div id="dt9_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt9_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt9quest3">
                                     <input type="radio" name="options" id="dt9_quest_3_option1">Si
                                 </label>
@@ -116,7 +116,7 @@
                             <label class="control-label col-md-8">
                                 ¿Una flor que haya recogido?
                             </label>
-                            <div id="dt9_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt9_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt9quest4">
                                     <input type="radio" name="options" id="dt9_quest_4_option1">Si
                                 </label>
@@ -139,7 +139,7 @@
                             <label class="control-label col-md-8">
                                 ¿Un insecto que haya encontrado en el pasto?
                             </label>
-                            <div id="dt9_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt9_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt9quest5">
                                     <input type="radio" name="options" id="dt9_quest_5_option1">Si
                                 </label>
@@ -162,7 +162,7 @@
                             <label class="control-label col-md-8">
                                 ¿Algunos bloques que haya unido entre sí?
                             </label>
-                            <div id="dt9_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt9_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt9quest6">
                                     <input type="radio" name="options" id="dt9_quest_6_option1">Si
                                 </label>
@@ -185,7 +185,7 @@
                             <label class="control-label col-md-8">
                                 Otros
                             </label>
-                            <div id="dt9_quest_7" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt9_quest_7" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt9quest7">
                                     <input type="radio" name="options" id="dt9_quest_7_option1">Si
                                 </label>
@@ -220,7 +220,7 @@
                         <label class="control-label col-md-8">
                             ¿A veces hace esto solo para mostrarle, y no para pedir ayuda?
                         </label>
-                        <div id="dt9_quest_9" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt9_quest_9" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt9quest9">
                                 <input type="radio" name="options" id="dt9_quest_9_option1">Si
                             </label>
@@ -260,7 +260,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq9Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq9Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
