--- a/madurativas/Views/Home/PartialView/Vigilancia/_PersonalSocial.cshtml
+++ b/madurativas/Views/Home/PartialView/Vigilancia/_PersonalSocial.cshtml
@@ -75,15 +75,16 @@
         <table class="col-md-12">
             <tr>
                 <td class="col-md-6">
-                    <h3 class="modal-title">Area personal - social</h3>
-                    <h5><strong>Paciente:</strong> @Model.FullName</h5>
-                    <h5><strong>Edad Cronologica:</strong> @_edadAMostrar años.</h5>
+                    <h4 class="modal-title">Área personal - social</h4>
+                    <p class="margen-parrafo"><strong>Paciente:</strong> @Model.FullName</p>
+                    <p class="margen-parrafo"><strong>Edad Cronologica:</strong> @_edadAMostrar años.</p>
                     @if (_edadCorregida != 0 && _Caledad.Days < 730)
-                    {<h5><strong>Edad Corregida:</strong> @_edadCorregida años.</h5>}
+                    {<p class="margen-parrafo"><strong>Edad Corregida:</strong> @_edadCorregida años.</p>}
                 </td>
                 <td class="col-md-6">
-                    <button style="color:white; margin-right: 5%;" type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 style="color: white; float: right;"><strong>No es una prueba diagnóstica</strong></h4>
+                    <h5 style="color: white; float: right; width: 100%; text-align: right;">
+                        <strong><button style="color:white; margin-right: 5%;" type="button" class="close" data-dismiss="modal">&times;</button> No es una prueba diagnóstica&nbsp;&nbsp;</strong>
+                    </h5>
                 </td>
             </tr>
         </table>
@@ -94,7 +95,7 @@
         <table class="table table-condensed">
             <thead>
                 <tr>
-                    <th>Area personal - social</th>
+                    <th>Área personal - social</th>
                     <th>Min*</th>
                     <th>Max**</th>
                     <th></th>
