--- a/madurativas/Views/Home/PartialView/Vigilancia/_motricidadGruesa.cshtml
+++ b/madurativas/Views/Home/PartialView/Vigilancia/_motricidadGruesa.cshtml
@@ -74,15 +74,16 @@
         <table class="col-md-12">
             <tr>
                 <td class="col-md-6">
-                    <h3 class="modal-title">Motricidad Gruesa</h3>
-                    <h5><strong>Paciente:</strong> @Model.FullName</h5>
-                    <h5><strong>Edad Cronologica:</strong> @_edadAMostrar años.</h5>
+                    <h4 class="modal-title">Motricidad Gruesa</h4>
+                    <p class="margen-parrafo"><strong>Paciente:</strong> @Model.FullName</p>
+                    <p class="margen-parrafo"><strong>Edad Cronologica:</strong> @_edadAMostrar años.</p>
                     @if (_edadCorregida != 0 && _Caledad.Days < 730)
-                    {<h5><strong>Edad Corregida:</strong> @_edadCorregidaAMostrar años.</h5>}
+                    {<p class="margen-parrafo"><strong>Edad Corregida:</strong> @_edadCorregidaAMostrar años.</p>}
                 </td>
                 <td class="col-md-6">
-                    <button style="color:white; margin-right: 5%;" type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 style="color: white; float: right;"><strong>No es una prueba diagnóstica</strong></h4>
+                    <h5 style="color: white; float: right; width: 100%; text-align: right;">
+                        <strong><button style="color:white; margin-right: 5%;" type="button" class="close" data-dismiss="modal">&times;</button> No es una prueba diagnóstica&nbsp;&nbsp;</strong>
+                    </h5>
                 </td>
             </tr>
         </table>
