--- a/madurativas/Views/Home/PartialView/_evalRiesgos.cshtml
+++ b/madurativas/Views/Home/PartialView/_evalRiesgos.cshtml
@@ -19,7 +19,7 @@
                 @Html.HiddenFor(model => model.estudioid)
                 <div class="form-group">
                     @Html.Label("¿Hubo algún problema durante la gestación, parto o nacimiento del niño?", htmlAttributes: new { @class = "control-label col-md-8" })
-                    <div id="problema_gpn" class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <div id="problema_gpn" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                         <label onclick="SelectableER(this)" class="btn btn-secondary problemagpn">
                             <input type="radio" name="options" id="problema_gpn_option1">Si
                         </label>
@@ -34,7 +34,7 @@
 
                 <div class="form-group">
                     <label class="control-label col-md-8">Problemas durante la gestación como hipertensión diabetes, eclampsia, infecciones intrauterinas (Ej: rubéola, toxoplasmosis, VIH/sida) o en el momento del nacimiento como asfixia intrauterina, hemorragia, fiebre materna, etc. </label>
-                    <div id="problema_gestacion_enfermedad" style="margin-top:2%" class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <div id="problema_gestacion_enfermedad" style="margin-top:2%" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                         <label onclick="SelectableER(this)" class="btn btn-secondary problemagestacionenfermedad">
                             <input type="radio" name="options" id="problema_gestacion_enfermedad_option1">Si
                         </label>
@@ -49,7 +49,7 @@
 
                 <div class="form-group">
                     @Html.Label("¿El niño estuvo hospitalizado después de nacer? ", htmlAttributes: new { @class = "control-label col-md-8" })
-                    <div id="hospitalizado_postnacimiento" class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <div id="hospitalizado_postnacimiento" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                         <label onclick="SelectableER(this)" class="btn btn-secondary hospitalizadopostnacimiento">
                             <input type="radio" name="options" id="hospitalizado_postnacimiento_option1">Si
                         </label>
@@ -64,7 +64,7 @@
 
                 <div class="form-group">
                     @Html.Label("¿Ha padecido ictericia severa?", htmlAttributes: new { @class = "control-label col-md-8 col-xs-10" })
-                    <div id="ictericiasevera" class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <div id="ictericiasevera" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                         <label onclick="SelectableER(this)" class="btn btn-secondary ictericiasevera">
                             <input type="radio" name="options" id="ictericiasevera_option1">Si
                         </label>
@@ -79,7 +79,7 @@
 
                 <div class="form-group">
                     @Html.Label("¿Ha padecido alguna enfermedad grave? ", htmlAttributes: new { @class = "control-label col-md-8" })
-                    <div id="enfermedadgrave" class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <div id="enfermedadgrave" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                         <label onclick="SelectableER(this)" class="btn btn-secondary enfermedadgrave">
                             <input type="radio" name="options" id="enfermedadgrave_option1">Si
                         </label>
@@ -94,7 +94,7 @@
 
                 <div class="form-group">
                     <label class="control-label col-md-8">Casos de deficiencia mental u otro disturbio mental en la familia.</label>
-                    <div id="deficienciamental" class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <div id="deficienciamental" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                         <label onclick="SelectableER(this)" class="btn btn-secondary deficienciamental">
                             <input type="radio" name="options" id="deficienciamental_option1">Si
                         </label>
@@ -109,7 +109,7 @@
 
                 <div class="form-group">
                     <label class="control-label col-md-8">Factores de riesgos ambientales como violencia familiar, depresión materna, drogas o alcoholismo, sospecha de abuso sexual, etc.</label>
-                    <div id="riesgos_ambientales" style="margin-top:1%" class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <div id="riesgos_ambientales" style="margin-top:1%" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                         <label onclick="SelectableER(this)" class="btn btn-secondary riesgosambientales">
                             <input type="radio" name="options" id="riesgos_ambientales_option1">Si
                         </label>
@@ -143,7 +143,7 @@
         <div class="modal-footer">
             <div class="form-group">
                 <div class="col-md-12">
-                    <button id="btnEvalRiesgos" onclick="SaveERiesgo();" class="btn btn-sm btn-primary" >Guardar</button>                    
+                    <button id="btnEvalRiesgos" onclick="SaveERiesgo();" class="btn btn-sm btn-primary btn-fixed" >Guardar</button>                    
                 </div>
             </div>
         </div>
