--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_15.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_15.cshtml
@@ -32,7 +32,7 @@
                         <label class="control-label col-md-8">
                             15. ¿@Model.estudio.Paciente.nombre trata de copiar lo que Ud. hace?
                         </label>
-                        <div id="dt15_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt15_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt15quest1">
                                 <input type="radio" name="options" id="dt15_quest_1_option1">Si
                             </label>
@@ -62,7 +62,7 @@
                         <label class="control-label col-md-8">
                             ¿Saca la lengua?
                         </label>
-                        <div id="dt15_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt15_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt15quest2">
                                 <input type="radio" name="options" id="dt15_quest_2_option1">Si
                             </label>
@@ -85,7 +85,7 @@
                         <label class="control-label col-md-8">
                             ¿Hace un ruido gracioso?
                         </label>
-                        <div id="dt15_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt15_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt15quest3">
                                 <input type="radio" name="options" id="dt15_quest_3_option1">Si
                             </label>
@@ -108,7 +108,7 @@
                         <label class="control-label col-md-8">
                             ¿Dice adiós con la mano?
                         </label>
-                        <div id="dt15_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt15_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt15quest4">
                                 <input type="radio" name="options" id="dt15_quest_4_option1">Si
                             </label>
@@ -131,7 +131,7 @@
                         <label class="control-label col-md-8">
                             ¿Aplaude?
                         </label>
-                        <div id="dt15_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt15_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt15quest5">
                                 <input type="radio" name="options" id="dt15_quest_5_option1">Si
                             </label>
@@ -154,7 +154,7 @@
                         <label class="control-label col-md-8">
                             ¿Pone un dedo sobre sus labios para decir “shhh”?
                         </label>
-                        <div id="dt15_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt15_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt15quest6">
                                 <input type="radio" name="options" id="dt15_quest_6_option1">Si
                             </label>
@@ -177,7 +177,7 @@
                         <label class="control-label col-md-8">
                             ¿Tira un beso?
                         </label>
-                        <div id="dt15_quest_7" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt15_quest_7" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt15quest7">
                                 <input type="radio" name="options" id="dt15_quest_7_option1">Si
                             </label>
@@ -200,7 +200,7 @@
                         <label class="control-label col-md-8">
                             Otros
                         </label>
-                        <div id="dt15_quest_8" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt15_quest_8" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt15quest8">
                                 <input type="radio" name="options" id="dt15_quest_8_option1">Si
                             </label>
@@ -254,7 +254,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq15Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq15Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
