--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_20.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_20.cshtml
@@ -30,7 +30,7 @@
                         <label class="control-label col-md-8">
                             20. ¿A @Model.estudio.Paciente.nombre le gustan las actividades de movimiento?
                         </label>
-                        <div id="dt20_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt20_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt20quest1">
                                 <input type="radio" name="options" id="dt20_quest_1_option1">Si
                             </label>
@@ -53,7 +53,7 @@
                         <label class="control-label col-md-8">
                             ¿Le gusta jugar al “caballito” sobre sus rodillas o hamacarse?
                         </label>
-                        <div id="dt20_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt20_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt20quest2">
                                 <input type="radio" name="options" id="dt20_quest_2_option1">Si
                             </label>
@@ -82,7 +82,7 @@
                             <label class="control-label col-md-8">
                                 ¿Se ríe o sonríe?
                             </label>
-                            <div id="dt20_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt20_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt20quest3">
                                     <input type="radio" name="options" id="dt20_quest_3_option1">Si
                                 </label>
@@ -105,7 +105,7 @@
                             <label class="control-label col-md-8">
                                 ¿Habla o balbucea?
                             </label>
-                            <div id="dt20_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt20_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt20quest4">
                                     <input type="radio" name="options" id="dt20_quest_4_option1">Si
                                 </label>
@@ -128,7 +128,7 @@
                             <label class="control-label col-md-8">
                                 ¿Pide más, alzando los brazos?
                             </label>
-                            <div id="dt20_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt20_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt20quest5">
                                     <input type="radio" name="options" id="dt20_quest_5_option1">Si
                                 </label>
@@ -151,7 +151,7 @@
                             <label class="control-label col-md-8">
                                 Otros
                             </label>
-                            <div id="dt20_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt20_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt20quest6">
                                     <input type="radio" name="options" id="dt20_quest_6_option1">Si
                                 </label>
@@ -204,7 +204,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq20Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq20Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
