--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_4.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_4.cshtml
@@ -32,7 +32,7 @@
                         <label class="control-label col-md-8">
                             4- ¿A @Model.estudio.Paciente.nombre le gusta treparse a cosas?
                         </label>
-                        <div id="dt4_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt4_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt4quest1">
                                 <input type="radio" name="options" id="dt4_quest_1_option1">Si
                             </label>
@@ -70,7 +70,7 @@
                             <label class="control-label col-md-8">
                                 ¿Escaleras?
                             </label>
-                            <div id="dt4_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt4_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt4quest2">
                                     <input type="radio" name="options" id="dt4_quest_2_option1">Si
                                 </label>
@@ -93,7 +93,7 @@
                             <label class="control-label col-md-8">
                                 ¿Sillas?
                             </label>
-                            <div id="dt4_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt4_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt4quest3">
                                     <input type="radio" name="options" id="dt4_quest_3_option1">Si
                                 </label>
@@ -116,7 +116,7 @@
                             <label class="control-label col-md-8">
                                 ¿Muebles?
                             </label>
-                            <div id="dt4_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt4_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt4quest4">
                                     <input type="radio" name="options" id="dt4_quest_4_option1">Si
                                 </label>
@@ -138,7 +138,7 @@
                             <label class="control-label col-md-8">
                                 ¿Juegos de la plaza?
                             </label>
-                            <div id="dt4_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt4_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt4quest5">
                                     <input type="radio" name="options" id="dt4_quest_5_option1">Si
                                 </label>
@@ -182,7 +182,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq4Save" onclick="location.reload(true);" type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq4Save" onclick="location.reload(true);" type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
