--- a/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_6.cshtml
+++ b/madurativas/Views/mChat/PartialView/m-chat/details/_detailQuest_6.cshtml
@@ -31,7 +31,7 @@
                         <label class="control-label col-md-8">
                             6. ¿ señala con el dedo cuando quiere pedir algo o buscar ayuda?
                         </label>
-                        <div id="dt6_quest_1" class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div id="dt6_quest_1" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                             <label onclick="Selectable(this)" class="btn btn-secondary dt6quest1">
                                 <input type="radio" name="options" id="dt6_quest_1_option1">Si
                             </label>
@@ -68,7 +68,7 @@
                             <label class="control-label col-md-8">
                                 ¿Intenta alcanzar el objeto con su mano entera?
                             </label>
-                            <div id="dt6_quest_2" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt6_quest_2" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt6quest2">
                                     <input type="radio" name="options" id="dt6_quest_2_option1">Si
                                 </label>
@@ -91,7 +91,7 @@
                             <label class="control-label col-md-8">
                                 ¿Lo o la lleva hasta el objeto?
                             </label>
-                            <div id="dt6_quest_3" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt6_quest_3" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt6quest3">
                                     <input type="radio" name="options" id="dt6_quest_3_option1">Si
                                 </label>
@@ -114,7 +114,7 @@
                             <label class="control-label col-md-8">
                                 ¿Intenta alcanzar el objeto por si solo/sola?
                             </label>
-                            <div id="dt6_quest_4" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt6_quest_4" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt6quest4">
                                     <input type="radio" name="options" id="dt6_quest_4_option1">Si
                                 </label>
@@ -137,7 +137,7 @@
                             <label class="control-label col-md-8">
                                 ¿Pide el objeto usando palabras o sonidos?
                             </label>
-                            <div id="dt6_quest_5" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt6_quest_5" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt6quest5">
                                     <input type="radio" name="options" id="dt6_quest_5_option1">Si
                                 </label>
@@ -160,7 +160,7 @@
                             <label class="control-label col-md-8">
                                 Si Ud. dijera “Mostrame” ¿ @Model.estudio.Paciente.nombre le señalaría el objeto?
                             </label>
-                            <div id="dt6_quest_6" class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div id="dt6_quest_6" class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                                 <label onclick="Selectable(this)" class="btn btn-secondary dt6quest6">
                                     <input type="radio" name="options" id="dt6_quest_6_option1">Si
                                 </label>
@@ -201,7 +201,7 @@
     <div class="modal-footer">
         <div class="form-group">
             <div class="col-md-12">
-                <button id="btndtq6Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary" data-dismiss="modal">Guardar</button>
+                <button id="btndtq6Save" @*onclick="location.reload(true);"*@ type="submit" class="btn btn-primary btn-fixed" data-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
